Revert "Document ConditionalApply and AssertSameNode"
This reverts commit fb687f99346a21a01255005f4f3a573755063096.

--- a/manual/cypher/cypher-docs/src/docs/dev/execution-plans.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/execution-plans.asciidoc
@@ -33,7 +33,7 @@ include::execution-plan-groups/expand.asciidoc[]
 
 :leveloffset: 1
 
-include::execution-plan-groups/combining-operators.adoc[]
+include::execution-plan-groups/combining.asciidoc[]
 
 :leveloffset: 1
 
