--- a/manual/cypher/cypher-docs/src/docs/dev/query-tuning.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/query-tuning.asciidoc
@@ -33,7 +33,7 @@ While this should lead to superior execution plans in most cases, it is still un
 
 By default, Neo4j 2.2 will use the cost planner for some queries, but not all.
 You can force it to use a specific planner by using the `query.planner.version` configuration setting (see <<config_dbms.cypher.planner>>), or by prepending your query with `CYPHER planner=cost` or `CYPHER planner=rule`.
-Neo4j might still not use the planner you selected -- not all queries are solvable by the cost planner at this point. Note that using `PLANNER COST` or `PLANNER RULE` in order to switch between planners has been deprecated and will stop working in future versions.
+Neo4j might still not use the planner you selected -- not all queries are solvable by the cost planner at this point.
 
 You can see which planner was used by looking at the execution plan.
 
