--- a/community/bolt/src/docs/dev/messaging.asciidoc
+++ b/community/bolt/src/docs/dev/messaging.asciidoc
@@ -76,7 +76,9 @@ This message is always the first message the client sends after <<bolt-handshake
 Sending any message other than `INIT` as the first message to the server will result in a `FAILURE` and the
 server closing the connection.
 
-The server will reply with a `SUCCESS` message unless some parameter for initialization is malformed.
+===== Response
+- `SUCCESS` if initialization has completed successfully
+- `FAILURE` if the request was malformed or if initialization cannot be performed at this time
 
 All parameters in the `INIT` message are required.
 
@@ -105,7 +107,7 @@ B1 01 8C 4D  79 43 6C 69  65 6E 74 2F  31 2E 30
 [[bolt-message-structs-run]]
 ==== RUN
 
-The `RUN` message is a client message used to start a new job on the server. It has the following structure:
+The `RUN` message is a client message used to pass a Cypher statement for execution on the server. It has the following structure:
 
 [source,bolt_message_struct]
 ----
@@ -128,6 +130,10 @@ In the case where a previous result stream has not yet been fully consumed, an a
 
 If an unacknowledged failure is pending from a previous exchange, the server will immediately respond with a single
 `IGNORED` message and take no further action.
+
+===== Response
+- `SUCCESS` if the statement has been accepted for execution
+- `FAILURE` if the request was malformed or if a statement may not be executed at this time
 
 .Example
 [source,bolt_packstream_type]
@@ -152,6 +158,10 @@ On receipt of a `DISCARD_ALL` message, the server will dispose of all remaining 
 If no result stream is currently active, the server will respond with a single `FAILURE` message.
 
 If an unacknowledged failure is pending from a previous exchange, the server will immediately respond with a single `IGNORED` message and take no further action.
+
+===== Response
+- `SUCCESS` if the result stream has been successfully discarded
+- `FAILURE` if no result stream is currently available
 
 .Example
 [source,bolt_packstream_type]
@@ -178,6 +188,10 @@ If an error is encountered, the server must instead send a `FAILURE` message, di
 
 If an unacknowledged failure is pending from a previous exchange, the server will immediately respond with a single `IGNORED` message and take no further action.
 
+===== Response
+- `SUCCESS` if the result stream has been successfully transferred
+- `FAILURE` if no result stream is currently available or if retrieval fails
+
 .Example
 [source,bolt_packstream_type]
 ----
@@ -201,6 +215,10 @@ On receipt of an `ACK_FAILURE` message, the server will clear any pending failur
 If no such failure state is pending, a FAILURE message will be sent instead.
 
 An `ACK_FAILURE` will never be ignored by the server.
+
+===== Response
+- `SUCCESS` if a failure has been successfully acknowledged
+- `FAILURE` if there is no failure that requires acknowledgement
 
 .Example
 [source,bolt_packstream_type]
