Add docs for shortest path with predicates
 - Add shortest path with predicate query to Match article
 - Add new article about shortest path execution plans
 - Add profileExecutionPlan() to doc DSL
 - Fix execution plan formatting

--- a/manual/cypher/cypher-docs/src/docs/dev/execution-plans.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/execution-plans.asciidoc
@@ -42,3 +42,7 @@ include::execution-plan-groups/row.asciidoc[]
 :leveloffset: 1
 
 include::execution-plan-groups/update.asciidoc[]
+
+:leveloffset: 1
+
+include::execution-plan-groups/query-shortestpath-planning.adoc[]
