--- a/enterprise/metrics/src/docs/ops/metrics.asciidoc
+++ b/enterprise/metrics/src/docs/ops/metrics.asciidoc
@@ -6,7 +6,7 @@ NOTE: Metrics reporting is only available in the Neo4j Enterprise Edition.
 [[metrics-introduction]]
 == Introducing Metrics ==
 
-Neo4j Enterprise can be configured to continuously export Neo4j-specific metrics to Graphite, Ganglia, or CSV files.
+Neo4j Enterprise can be configured to continuously export Neo4j-specific metrics to Graphite or CSV files.
 This makes it easy to monitor the health of running Neo4j instances.
 
 Neo4j Enterprise can expose metrics for the following parts of the database, and does so by default:
@@ -46,19 +46,6 @@ metrics.prefix=<Neo4j instance name, e.g. wwwneo1>
 ----
 
 Start the Neo4j Server and connect to Graphite via a web browser in order to monitor your Neo4j metrics.
-
-[[metrics-ganglia]]
-== Ganglia Configuration ==
-
-For Ganglia integration add the following settings to _neo4j.properties:_
-
-[source,properties]
-----
-metrics.ganglia.enabled=true // default is 'false'
-metrics.ganglia.server=<ip>:8469
-metrics.ganglia.interval=<how often to send data, defaults to 3s>
-metrics.prefix=<Neo4j instance name, e.g. wwwneo1>
-----
 
 [[metrics-csv]]
 == Export to CSV Configuration ==
