Port UsingTest to new docs framework

--- a/manual/cypher/cypher-docs/src/docs/dev/general.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/general.asciidoc
@@ -31,6 +31,6 @@ include::ql/union/index.asciidoc[]
 
 :leveloffset: 2
 
-include::ql/using/index.asciidoc[]
+include::ql/query-using.adoc[]
 
 :leveloffset: 0
