Move `USING` to query-tuning
- Provides a more useful example graph and queries.
- Fixes null issue with val/def field.
- Fixes the query with multiple index hints to not fallback to rule planner.

--- a/manual/cypher/cypher-docs/src/docs/dev/query-tuning.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/query-tuning.asciidoc
@@ -66,3 +66,7 @@ The same goes for labels, where declaring labels on both the start and end nodes
 
 
 include::../parsed-graphgists/query-tuning/basic-query-tuning-example.asciidoc[]
+
+:leveloffset: 2
+
+include::ql/query-using.adoc[]
