--- a/manual/cypher/cypher-docs/src/docs/dev/syntax/comparison.asciidoc
+++ b/manual/cypher/cypher-docs/src/docs/dev/syntax/comparison.asciidoc
@@ -37,7 +37,7 @@ The following points give some details on how the comparison is performed.
 == Chaining Comparison Operations ==
 Comparisons can be chained arbitrarily, e.g., `x < y <= z` is equivalent to `x < y AND y <= z`.
 
-Formally, if `a, b, c, ..., y, z` are expressions and `op1, op2, ..., opN` are comparison operators, then `a op1 b op2 c ... y opN z` is equivalent to a `op1 b and b op2 c and ... y opN z`.
+Formally, if `a, b, c, ..., y, z` are expressions and `op1, op2, ..., opN` are comparison operators, then `a op1 b op2 c ... y opN z` is equivalent to `a op1 b and b op2 c and ... y opN z`.
 
 Note that `a op1 b op2 c` does not imply any kind of comparison between a and c, so that, e.g., `x < y > z` is perfectly legal (though perhaps not pretty).
 
