--- a/community/embedded-examples/src/docs/dev/setup.asciidoc
+++ b/community/embedded-examples/src/docs/dev/setup.asciidoc
@@ -1,11 +1,14 @@
 [[tutorials-java-embedded-setup]]
-Include Neo4j in your project
-=============================
+= Include Neo4j in your project
+
+:javadoc-graphdatabasefactory: javadocs/org/neo4j/graphdb/GraphDatabaseFactory.html
+:javadoc-slf4jlogprovider: javadocs/org/neo4j/logging/slf4j/Slf4jLogProvider.html
+:javadoc-neo4jlogging: javadocs/org/neo4j/logging
 
 After selecting the appropriate <<editions,edition>> for your platform, embed Neo4j in your Java application by including the Neo4j library jars in your build.
 The following sections will show how to do this by either altering the build path directly or by using dependency management.
 
-== Add Neo4j to the build path ==
+== Add Neo4j to the build path
 
 Get the Neo4j libraries from one of these sources:
 
@@ -28,7 +31,7 @@ NetBeans::
 
 
 [[editions]]
-== Editions == 
+== Editions
 
 The following table outlines the available editions and their names for use with dependency management tools.
 
@@ -48,13 +51,13 @@ For more information regarding licensing, see the http://www.neo4j.org/learn/lic
 
 Javadocs can be downloaded packaged in jar files from Maven Central or read at link:javadocs/[javadocs].
 
-== Add Neo4j as a dependency ==
+== Add Neo4j as a dependency
 
 
 You can either go with the top-level artifact from the table above or include the individual components directly.
 The examples included here use the top-level artifact approach.
 
-=== Maven ===
+=== Maven
 
 Add the dependency to your project along the lines of the snippet below.
 This is usually done in the `pom.xml` file found in the root directory of the project.
@@ -77,12 +80,12 @@ This is usually done in the `pom.xml` file found in the root directory of the pr
 --------------------------------------------
 _Where the +artifactId+ is found in the editions table._
 
-=== Eclipse and Maven ===
+=== Eclipse and Maven
 
 For development in http://www.eclipse.org[Eclipse], it is recommended to install the http://www.eclipse.org/m2e/[m2e plugin] and let Maven manage the project build classpath instead, see above.
 This also adds the possibility to build your project both via the command line with Maven and have a working Eclipse setup for development.
 
-=== Ivy ===
+=== Ivy
 
 Make sure to resolve dependencies from Maven Central, for example using this configuration in your 'ivysettings.xml' file:
 
@@ -115,7 +118,7 @@ With that in place you can add Neo4j to the mix by having something along these 
 ----
 _Where the +name+ is found in the editions table above_
 
-=== Gradle ===
+=== Gradle
 
 The example below shows an example gradle build script for including the Neo4j libraries.
 
@@ -134,7 +137,7 @@ _Where the coordinates (+org.neo4j:neo4j+ in the example) are found in the editi
 
 
 [[tutorials-java-embedded-setup-startstop]]
-== Starting and stopping ==
+== Starting and stopping
 
 To create a new database or open an existing one you instantiate a +link:javadocs/org/neo4j/graphdb/GraphDatabaseService.html[GraphDatabaseService]+.
 
@@ -171,7 +174,7 @@ tag=shutdownHook
 ----
 
 [[tutorials-java-embedded-setup-config]]
-=== Starting an embedded database with configuration settings ===
+=== Starting an embedded database with configuration settings
 
 To start Neo4j with configuration settings, a Neo4j properties file can be loaded like this:
 
@@ -196,7 +199,7 @@ tag=startDbWithMapConfig
 For configuration settings, see <<configuration>>.
 
 [[tutorials-java-embedded-setup-readonly]]
-=== Starting an embedded read-only instance ===
+=== Starting an embedded read-only instance
 
 If you want a _read-only view_ of the database, create an instance this way:
 
@@ -213,9 +216,9 @@ Obviously the database has to already exist in this case.
 NOTE: Concurrent access to the same database files by multiple (read-only or write) instances is not supported.
 
 [[tutorials-java-embedded-logging]]
-== Controlling Logging ==
+== Controlling Logging
 
-Neo4j provides logging via its own +link:javadocs/org/neo4j/logging/Log.html[org.neo4j.logging.Log]+
+Neo4j provides logging via its own +link:{javadoc-neo4jlogging}/Log.html[org.neo4j.logging.Log]+
 layer, and does not natively use any existing Java logging framework. All
 logging events produced by Neo4j have a name, a level and a message. The name
 is a FQCN (fully qualified class name).
@@ -230,8 +233,8 @@ Neo4j uses the following log levels:
 |===
 
 [[enable-embedded-logging]]
-To enable logging, an implementation of +link:javadocs/org/neo4j/logging/LogProvider.html[org.neo4j.logging.LogProvider]+
-must be provided to the +link:javadocs/org/neo4j/graphdb/GraphDatabaseFactory.html[GraphDatabaseFactory]+,
+To enable logging, an implementation of +link:{javadoc-neo4jlogging}/LogProvider.html[org.neo4j.logging.LogProvider]+
+must be provided to the +link:{javadoc-graphdatabasefactory}[GraphDatabaseFactory]+,
 as follows:
 
 [snippet,java]
@@ -266,8 +269,8 @@ jar. This can be obtained via maven:
 </project>
 --------------------------------------------
 
-To use this binding, simply pass an instance of +link:javadocs/org/neo4j/logging/slf4j/Slf4jLogProvider.html[org.neo4j.logging.slf4j.Slf4jLogProvider]+
-to the +link:javadocs/org/neo4j/graphdb/GraphDatabaseFactory.html[GraphDatabaseFactory]+,
+To use this binding, simply pass an instance of +link:{javadoc-slf4jlogprovider}[org.neo4j.logging.slf4j.Slf4jLogProvider]+
+to the +link:{javadoc-graphdatabasefactory}[GraphDatabaseFactory]+,
 as follows:
 
 [snippet,java]
