--- a/community/shell/src/docs/dev/shell.asciidoc
+++ b/community/shell/src/docs/dev/shell.asciidoc
@@ -1,7 +1,5 @@
-
 [[shell]]
-Neo4j Shell
-===========
+= Neo4j Shell
 
 Neo4j shell is a command-line shell for running Cypher queries.
 There's also commands to get information about the database.
@@ -11,7 +9,7 @@ It's a nice tool for development and debugging.
 This guide will show you how to get it going!
 
 [[shell-starting]]
-== Starting the shell ==
+== Starting the shell
 
 When used together with a Neo4j server, simply issue the following at the command line:
 
@@ -30,7 +28,7 @@ and see <<shell-enabling-remote>> for remote databases.
 You need to make sure that the shell jar file is on the classpath when you start up your Neo4j instance.
 
 [[shell-enabling-remote]]
-=== Enabling the shell server ===
+=== Enabling the shell server
 
 Shell is enabled from the main configuration of Neo4j, see <<configuration-settings>>.
 Here's the available settings:
@@ -39,7 +37,7 @@ include::{importdir}/neo4j-shell-docs-jar/ops/configuration-attributes.asciidoc[
 
 There are two ways to start the shell, either by connecting to a remote shell server or by pointing it to a Neo4j store path.
 
-=== Connecting to a shell server ===
+=== Connecting to a shell server
 To start the shell and connect to a running server, run:
 [source,plain]
 ----
@@ -53,7 +51,7 @@ Then you'll get the shell prompt like this:
 neo4j-sh (0)$
 ----
 
-=== Pointing the shell to a path ===
+=== Pointing the shell to a path
 
 To start the shell by just pointing it to a Neo4j store path you run the shell jar file.
 Given that the right neo4j-kernel-<version>.jar and jta jar files are in the same path as your neo4j-shell-<version>.jar file you run it with:
@@ -63,7 +61,7 @@ $ neo4j-shell -path path/to/neo4j-db
 ----
 
 [[read-only-mode]]
-=== Read-only mode ===
+=== Read-only mode
 
 By issuing the +-readonly+ switch when starting the shell with a store path,
 changes cannot be made to the database during the session.
@@ -73,7 +71,7 @@ changes cannot be made to the database during the session.
 $ neo4j-shell -readonly -path path/to/neo4j-db
 ----
 
-=== Run a command and then exit ===
+=== Run a command and then exit
 
 It is possible to tell the shell to just start, execute a command and then exit.
 This opens up for uses of background jobs and also handling of huge output of f.ex. an +ls+ command where you then could pipe the output to +less+ or another reader of your choice, or even to a file.
@@ -86,7 +84,7 @@ $ neo4j-shell -c "cd -a 24 && set name Mattias"
 $ neo4j-shell -c "trav -r KNOWS" | less
 ----
 
-=== Pass Neo4j configuration options ===
+=== Pass Neo4j configuration options
 
 By setting the +-config+ switch, you can provide a properties file that will be used to configure your Neo4j instance,
 if started in embedded mode.
@@ -96,7 +94,7 @@ if started in embedded mode.
 $ neo4j-shell -config conf/neo4j.properties -path mydb
 ----
 
-=== Execute a file and then exit ===
+=== Execute a file and then exit
 
 To execute commands from a file  and then exit just provide a +-file
 filename+. This is faster than piping to the shell which still handles
@@ -113,7 +111,7 @@ $ neo4j-shell -file export.cql > result.txt
 Supplying +-+ as the filename reads from +stdin+ instead.
 
 [[shell-options]]
-== Passing options and arguments ==
+== Passing options and arguments
 
 Passing options and arguments to your commands is very similar to many CLI commands in an *nix environment.
 Options are prefixed with a +-+ and can contain one or more options.
@@ -131,7 +129,7 @@ The reason for this is that the +ls+ command doesn't expect any values associate
 So, it can infer the right values for the rights options.
 
 [[shell-options-enum]]
-== Enum options ==
+== Enum options
 
 Some options expects a value which is one of the values in an enum, f.ex. direction part of relationship type filtering where there's +INCOMING+, +OUTGOING+ and +BOTH+.
 All such values can be supplied in an easier way.
@@ -139,7 +137,7 @@ It's enough that you write the start of the value and the interpreter will find 
 F.ex. +out+, +in+, +i+ or even +INCOMING+.
 
 [[shell-filters]]
-== Filters ==
+== Filters
 
 Some commands makes use of filters for varying purposes.
 F.ex. +-f+ in +ls+ and in +trav+.
@@ -150,7 +148,7 @@ The filter option is also accompanied by the options +-i+ and +-l+ which stands 
 So for a case-insensitive, loose filter you can supply a filter with +-f -i -l+ or +-fil+ for short.
 
 [[shell-titles]]
-== Node titles ==
+== Node titles
 
 To make it easier to navigate your graph the shell can display a title for each node, f.ex. in +ls -r+.
 It will display the relationships as well as the nodes on the other side of the relationships.
@@ -162,7 +160,7 @@ So you may specify a list (with or without regular expressions), f.ex: +name,tit
 The list is defined by the client (you) using the +TITLE_KEYS+ environment variable (see <<shell-env-vars>>) and the default being +.\*name.\*,.\*title.*+
 
 [[shell-commands]]
-== How to use (individual commands) ==
+== How to use (individual commands)
 
 The shell is modeled after Unix shells like bash that you use to walk around your local file system.
 It has some of the same commands, like +cd+ and +ls+.
@@ -170,7 +168,7 @@ When you first start the shell (see instructions above), you will get a list of 
 Use +man <command>+ to get more info about a particular command. Some notes:
 
 [[comments]]
-=== Comments ===
+=== Comments
 
 Single line comments, which will be ignored, can be made by using the prefix `//`. Example:
 
@@ -180,7 +178,8 @@ Single line comments, which will be ignored, can be made by using the prefix `//
 ----
 
 [[shell-current-pos]]
-=== Current node/relationship and path ===
+=== Current node/relationship and path
+
 You have a current node/relationship and a "current path" (like a current working directory in bash) that you've traversed so far.
 When the shell first starts you are not positioned on any entity, but you can +cd+ your way through the graph (check your current path at any time with the +pwd+ command).
 +cd+ can be used in different ways:
@@ -194,18 +193,21 @@ When the shell first starts you are not positioned on any entity, but you can +c
 * +cd end+ _(only if your current location is a relationship)_. Traverses to the end node of the relationship.
 
 [[shell-listing]]
-=== Listing the contents of a node/relationship ===
+=== Listing the contents of a node/relationship
+
 List contents of the current node/relationship (or any other node) with the +ls+ command.
 Please note that it will give an empty output if the current node/relationship has no properties or relationships (for example in the case of a brand new graph).
 +ls+ can take a node id as argument as well as filters, see <<shell-filters>> and for information about how to specify direction see <<shell-options-enum>>.
 Use +man ls+ for more info.
 
-=== Creating nodes and relationships ===
+=== Creating nodes and relationships
+
 You create new nodes by connecting them with relationships to the current node.
 For example, +mkrel -t A_RELATIONSHIP_TYPE -d OUTGOING -c+ will create a new node (+-c+) and draw to it an +OUTGOING+ relationship of type +A_RELATIONSHIP_TYPE+ from the current node.
 If you already have two nodes which you'd like to draw a relationship between (without creating a new node) you can do for example, +mkrel -t A_RELATIONSHIP_TYPE -d OUTGOING -n <other-node-id>+ and it will just create a new relationship between the current node and that other node.
 
-=== Setting, renaming and removing properties ===
+=== Setting, renaming and removing properties
+
 Property operations are done with the +set+, +mv+ and +rm+ commands.
 These commands operates on the current node/relationship.
 
@@ -234,14 +236,16 @@ mkrel -c -d i -t DOMAIN_OF --np "{'app':'foobar'}"
 * +rm <key>+ removes a property.
 * +mv <key> <new-key>+ renames a property from one key to another.
 
-=== Deleting nodes and relationships ===
+=== Deleting nodes and relationships
+
 Deletion of nodes and relationships is done with the +rmnode+ and +rmrel+ commands.
 +rmnode+ can delete nodes, if the node to be deleted still has relationships they can also be deleted by supplying -f option.
 +rmrel+ can delete relationships, it tries to ensure connectedness in the graph, but relationships can be deleted regardless with the -f option.
 +rmrel+ can also delete the node on the other side of the deleted relationship if it's left with no more relationships, see -d option.
 
 [[shell-env-vars]]
-=== Environment variables ===
+=== Environment variables
+
 The shell uses environment variables a-la bash to keep session information, such as the current path and more.
 The commands for this mimics the bash commands +export+ and +env+. For example you can at anytime issue a +export STACKTRACES=true+ command to set the +STACKTRACES+ environment variable to +true+. This will then result in stacktraces being printed if an exception or error should occur.
 Allowed values are all parseable JSON strings, so maps +\{age:10,name:"Mattias"}+ and arrays +[1,2,3]+ are also supported.
@@ -253,7 +257,8 @@ This becomes especially interesting as all shell variables are automatically pas
 
 Values are removed by setting them to +null+ or an empty value. List environment variables using +env+
 
-=== Executing groovy/python scripts ===
+=== Executing groovy/python scripts
+
 The shell has support for executing scripts, such as http://groovy.codehaus.org[Groovy] and http://www.python.org[Python] (via http://www.jython.org[Jython]).
 As of now the scripts (*.groovy, *.py) must exist on the server side and gets called from a client with for example, +gsh --renamePerson 1234 "Mathias" "Mattias" --doSomethingElse+ where the scripts renamePerson.groovy and doSomethingElse.groovy must exist on the server side in any of the paths given by the +GSH_PATH+ environment variable (defaults to .:src:src/script). This variable is like the java classpath, separated by a +:+. The python/jython scripts can be executed with the +jsh+ in a similar fashion, however the scripts have the .py extension and the environment variable for the paths is +JSH_PATH+.
 
@@ -261,7 +266,8 @@ When writing the scripts assume that there's made available an +args+ variable (
 In the case of the +renamePerson+ example above the array would contain +["1234", "Mathias", "Mattias"]+.
 Also please write your outputs to the +out+ variable, such as +out.println( "My tracing text" )+ so that it will be printed at the shell client instead of the server.
 
-=== Traverse ===
+=== Traverse
+
 You can traverse the graph with the +trav+ command which allows for simple traversing from the current node.
 You can supply which relationship types (w/ regex matching) and optionally direction as well as property filters for matching nodes.
 In addition to that you can supply a command line to execute for each match.
@@ -269,7 +275,7 @@ An example: +trav -o depth -r KNOWS:both,HAS_.\*:incoming -c "ls $n"+.
 Which means traverse depth first for relationships with type +KNOWS+ disregarding direction and incoming relationships with type matching +HAS_.\*+ and do a +ls <matching node>+ for each match. The node filtering is supplied with the +-f+ option, see <<shell-filters>>.
 See <<shell-options-enum>> for the traversal order option. Even relationship types/directions are supplied using the same format as filters.
 
-=== Query with Cypher ===
+=== Query with Cypher
 
 You can use Cypher to query the graph. For that, use the +match+ or +start+ command.
 You can also use +create+ statements to create nodes and relationships and use the +cypher VERSION+ prefix to select a certain cypher version.
@@ -289,7 +295,7 @@ return the nodes connected to the current node.
 create the friend and the relationship according to the variables available.
 
 [[shell-listing-indexes-and-constraints]]
-=== Listing Indexes and Constraints ===
+=== Listing Indexes and Constraints
 
 The +schema+ command provides information about indexes and constraints together with their current status.
 
@@ -351,7 +357,8 @@ Indexes and constraints can be created or removed using Cypher or the Java Core 
 whenever the graph is changed.  See <<graphdb-neo4j-schema>> for more information.
 
 [[shell-legacy-indexing]]
-=== Legacy Indexing ===
+=== Legacy Indexing
+
 It's possible to query and manipulate legacy indexes via the index command.
 
 Example: +index -i persons name+ (will index the name for the current node or relationship in the "persons" legacy index).
@@ -364,7 +371,8 @@ Example: +index -i persons name+ (will index the name for the current node or re
 * +-r+ will remove a key-value pair (if it exists) from a legacy index for the current node/relationship. Key and value are optional.
 * +-t+ will set the legacy index type to work with, for example `index -t Relationship --delete friends` will delete the +friends+ relationship index.
 
-=== Transactions ===
+=== Transactions
+
 It is useful to be able to test changes, and then being able to commit or rollback said changes.
 
 Transactions can be nested. With a nested transaction, a commit does not write any changes to disk, except for the
@@ -375,7 +383,7 @@ all open transactions.
 * +commit+ Commits a transaction.
 * +rollback+ Rollbacks all open transactions.
 
-=== Dumping the database or Cypher statement results ===
+=== Dumping the database or Cypher statement results
 
 [CAUTION]
 .Experimental feature
@@ -393,19 +401,23 @@ Examples:
 * `neo4j-shell -path db1 -c 'dump MATCH p=(n:Person {name:"Mattias"})-[r:KNOWS]->(m) RETURN p;' | neo4j-shell -path db2 -file -`
   imports the subgraph of the first database (db1) into the second (db2)
 
-==== Example Dump Scripts ====
+==== Example dump script
 
 include::shell/simple-cypher-result-dump.asciidoc[]
 
-include::shell/database-dump.asciidoc[]
+// Put on hold as the output can't be imported as is.
+//include::shell/database-dump.asciidoc[]
+
+[[shell-example-sessions]]
+== Example shell sessions
 
 [[shell-sample-session]]
-== An example shell session ==
+=== An example shell session
 
 include::shell/sample-session.asciidoc[]
 
 [[shell-matrix-example]]
-== A Matrix example ==
+=== A Matrix example
 
 This example is creating a graph of the characters in the Matrix via the shell and then executing Cypher queries against it:
 
