--- a/community/bolt/src/docs/dev/messaging.asciidoc
+++ b/community/bolt/src/docs/dev/messaging.asciidoc
@@ -228,6 +228,29 @@ Value: ACK_FAILURE
 B0 0F
 ----
 
+==== RESET
+
+The `RESET` message is a client message used to return the current session to a "clean" state by discarding any outstanding records and rolling back the current transaction, if one exists.
+`RESET` will also override any outstanding `FAILURE` and can therefore be used in place of an `ACK_FAILURE` (albeit with extra power).
+
+[source,bolt_message_struct]
+----
+ResetMessage (signature=0x02) {
+}
+----
+
+.Response
+- `SUCCESS {}` if the session was successfully reset
+- `FAILURE {"code": ..., "message": ...}` if a reset is not currently possible
+
+.Example
+[source,bolt_packstream_type]
+----
+Value: RESET
+
+B0 02
+----
+
 ==== RECORD
 
 The `RECORD` message is a server detail message used to deliver data from the server to the client.
