--- a/community/bolt/src/docs/dev/examples.asciidoc
+++ b/community/bolt/src/docs/dev/examples.asciidoc
@@ -587,3 +587,45 @@ Server: SUCCESS {
   6E A3 86 6F  66 66 73 65  74 00 86 63  6F 6C 75 6D
   6E 01 84 6C  69 6E 65 01  00 00
 ----
+
+=== Resetting the session
+
+This illustrates how to reset the session to a "clean" state.
+
+.Resetting
+[source,bolt_exchange]
+----
+# Handshake
+Client: <connect>
+Client: 60 60 B0 17
+Client: 00 00 00 01  00 00 00 00  00 00 00 00  00 00 00 00
+Server: 00 00 00 01
+
+Client: INIT "MyClient/1.0"
+
+  00 0F B1 01 8C 4D 79 43    6C 69 65 6E 74 2F 31 2E    30 00 00
+
+Server: SUCCESS {}
+
+  00 03 b1 70  a0 00 00
+
+# Batch of messages
+Client: RUN "RETURN 1 AS num" {}
+
+  00 13 b2 10  8f 52 45 54  55 52 4e 20  31 20 41 53
+  20 6e 75 6d  a0 00 00
+
+# Server responses
+Server: SUCCESS { "fields": ["num"] }
+
+  00 0f b1 70  a1 86 66 69  65 6c 64 73  91 83 6e 75
+  6d 00 00
+
+Client: RESET {}
+
+  00 02 b0 02  00 00
+
+Server: SUCCESS {}
+
+  00 03 b1 70  a0 00 00
+----
