--- a/community/server/src/docs/ops/server-configuration.asciidoc
+++ b/community/server/src/docs/ops/server-configuration.asciidoc
@@ -18,7 +18,7 @@ administrators might choose to make changes (especially to the port settings).
 Set the location on disk of the database directory like this:
 [source,properties]
 ----
-org.neo4j.server.database.location=data/graph.db
+org.neo4j.server.database.location=data/databases/graph.db
 ----
 
 NOTE: On Windows systems, absolute locations including drive letters need to read '"c:/data/db"'.
